--- a/pizzaria-FULLSTACK/src/style/login.css
+++ b/pizzaria-FULLSTACK/src/style/login.css
@@ -1,5 +1,60 @@
-.card-login {
-    
-    width: 500px;
+
+
+
+*{
+    margin: 0 ;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif; ;
+}
+
+.main-login{
+    background-color: aquamarine;
     justify-content: center;
+    align-items: center;
+    min-width: 300px;
+    min-height: 100vh;
+    display: flex;
+}
+
+.card-login{
+    background-color: cornflowerblue;
+    color:#fff;
+    width: 320px;
+    flex-direction: column;
+}
+
+.card-login h1{
+    text-align: center;
+}
+
+.card-login .input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    border:none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    background: transparent;
+    padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder{
+    color: #fff;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    transform: translateY(-50%);
+    top: 50%;
+    font-size: 20px;
+
 }
