--- a/pizzaria-FULLSTACK/src/style/register.css
+++ b/pizzaria-FULLSTACK/src/style/register.css
@@ -5,7 +5,7 @@
     font-family: "Poppins", sans-serif; ;
 }
 
-.main-login{
+.main-register{
     background-color: #C8102E;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
     display: flex;
 }
 
-.card-login{
+.card-register{
     background-color: #FDFDFD;
     color:#e70000;
     width: 420px;
@@ -22,12 +22,12 @@
     padding: 30px 40px;
 }
 
-.card-login h1{
+.card-register h1{
     text-align: center;
     color: #C8102E;
 }
 
-.card-login .input-box{
+.card-register .input-box{
     position: relative;
     width: 100%;
     height: 50px;
@@ -58,7 +58,7 @@
     
 }
 
-.card-login .btn{
+.card-register .btn{
     width: 100%;
     height: 45px;
     background-color:#C8102E ;
@@ -71,14 +71,14 @@
     
 }
 
-.card-login .logar-link{
+.card-register .logar-link{
     font-size: 14.5px;
     text-align: center;
     margin-top: 20px;
     margin: 20px 0 15px;
 }
 
-.logar-link p a{
+.logar-link p Link{
     color:#2E7D32 ;
     text-decoration: none;
     font-weight: 600;
