--- a/pizzaria-FULLSTACK/src/style/register.css
+++ b/pizzaria-FULLSTACK/src/style/register.css
@@ -60,7 +60,6 @@
 
 .card-register .btn{
     width: 100%;
-    height: 45px;
     background-color:#C8102E ;
     border: none;
     outline: none;
@@ -68,6 +67,7 @@
     cursor: pointer;
     font-size: 16px;
     color: #fff;
+    text-align: center
     
 }
 
