--- a/pizzaria-FULLSTACK/src/style/landing.css
+++ b/pizzaria-FULLSTACK/src/style/landing.css
@@ -101,8 +101,8 @@
 .search-btn {
   position: absolute;
   right: 14px;
-  top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-40%);
+  top: 52%;
   background: none;
   border: none;
   color: white;
@@ -218,22 +218,16 @@
   justify-content: center;
 }
 
-.email-field {
-  flex: 1;
-  min-width: 280px;
-  padding: 1.2rem 1.8rem;
-  border-radius: 50px;
+.contatos{
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+}
+
+.btn-contato{
+  background-color: transparent;
   border: none;
-  font-size: 1.1rem;
-}
-
-.btn-light {
-  background: white;
-  color: var(--green-dark);
-}
-
-.btn-light:hover {
-  background: #f5f5f5;
+  cursor: pointer;
 }
 
 /* Animação */
